--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-cors": "^0.11.3",
         "doctrine/dbal": "^2.5",
         "intervention/image": "^2.3",
         "laravel/framework": "5.5.*",
